adding script to retrieve strava data

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+# Strava Access
 
+CLIENT_ID = 106977
+CLIENT_SECRET = a83342de8ab7554ecb6d4fdb2514b727b60ef6f4
+ACCESS_TOKEN = 727ec527005c6a6d72fcc93b92249146c1c90bc7
+CODE_URL = a7773940e25ebaeccf87a9d205e3e9cf2c9522e3
+
+# Proxy settings
+PROXY = http://10.246.170.130:3128
